sfdc/force-app/main/default/objects/Fulcrum_Config__c/Fulcrum_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>MarginArc Config</label>
</CustomObject>