sfdc/force-app/main/default/objects/Fulcrum_Config__c/fields/Gemini_API_Key__c.field-meta.xml
<CustomField>
    <fullName>Gemini_API_Key__c</fullName>
    <label>Gemini API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>